src/index.css
body {
  /* margin: 0; */
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: flex;
  justify-content: center;
  background-color: rgba(255, 230, 86, 0.1);
}

/* font-family: 'Montserrat', sans-serif;
  font-family: 'Sofadi One', cursive;
  font-family: 'Work Sans', sans-serif; */

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}
.source {
  text-decoration: none;
  color: #0e79b2;
  font-weight: bold;
  font-size: 1.2em;
}
a::after {
  text-decoration: none;
  color: #0e79b2;
  font-weight: bold;
  font-size: 1.2em;
}
@media (max-width: 844px) {
  body {
    margin-top: -0.5%;
    max-width: 700px;
    overflow-x: hidden;
  }
  .letuce,
  .turnip,
  .beet,
  .the {
    font-family: 'Sofadi One', cursive;
    text-shadow: 1px 1px black;

    position: absolute;
  }
  .letuce,
  .turnip,
  .beet {
    font-size: 4.5em;
  }
  .letuce {
    /* top: -2vw; */
    color: #e0ff87;
    /* left: 9vw; */
    left: 3%;
  }
  .turnip {
    color: #ffe656;
    /* left: 30vw;
  top: 31vw; */
    top: 11%;
    left: 23%;
  }
  .the {
    color: #0e79b2;
    font-size: 3em;
    top: 38%;
    left: 30%;
  }
  .beet {
    color: #df0054;
    top: 36%;
    left: 52%;
  }
  .characters {
    position: absolute;
    left: 2.5%;
    top: 21%;
    width: 75%;
    height: auto;
  }
  .donut,
  .fresh {
    position: absolute;
    font-family: 'Work Sans';
    font-size: 1.65em;
    line-height: -2em;
    font-weight: bold;
    width: 60%;
  }
  .fresh {
    top: 58%;
    left: 4%;
  }
  .donut {
    top: 48%;
    left: 35%;
  }
  .footer-login,
  .footer-register {
    font-size: 0.8em;
  }
  .footer-login {
    display: flex;
    margin-top: auto;
    /* margin-top: 40px; */
    width: 70%;
    justify-content: center;
  }
  .footer-register {
    position: absolute;
    top: 85%;
    width: 70%;
    left: 15%;
  }

  .fresh,
  .donut,
  .footer,
  .landing-login {
    color: rgba(0, 0, 0, 0.6);
  }
  .button {
    border-radius: 20px;
    font-family: 'Montserrat', sans-serif;
    color: white;
    background-color: #ffe656;
    font-size: 2em;
    font-weight: bolder;
    text-shadow: 1px 1px black;
    z-index: 1;
  }
  .landing-button {
    position: absolute;
    top: 71%;
    left: 23%;
    width: 50%;
    height: 11%;
  }
  .landing-login {
    position: absolute;
    top: 80.5%;
    left: 25%;
  }
  .register-login {
    position: absolute;
    left: 25%;
    padding-top: 6%;
  }
  .form-container,
  .register-form-container {
    display: flex;

    border-radius: 100px;
    box-shadow: inset 0px 0px 1px 1px rgba(255, 230, 86, 0.1);
    margin-top: 15%;
    width: 95vw;
    background-color: white;
  }
  .register-form-container {
    height: 650px;
  }
  .form-header {
    margin-top: 5vw;
    text-shadow: 1px 1px black;
    color: #e0ff87;
  }
  input[type='text'],
  input[type='password'] {
    /* margin: 3%; */
    margin-top: 5px;
    margin-left: 20%;
    height: 85%;
    width: 11em;
    font-size: 0.8em;
    font-weight: bolder;
    overflow-x: hidden;
    border: hidden;
    border-radius: 25px;
  }
  input[type='text']:focus,
  input[type='password']:focus {
    outline: none;
    background-color: white;
  }
  .error,
  .error-login {
    display: flex;
    justify-content: center;
    font-size: 0.7em;
  }
  .error-login {
    font-size: 1.2em;
  }

  .inputWrapper {
    height: 15vw;
    width: 80vw;
    font-size: 1.7em;
    font-weight: bolder;
    border-radius: 30px;
    border: 1px solid black;
    margin: 5%;
  }
  input[type='submit'] {
    margin: 7%;

    height: 15vw;
    width: 200px;
    border-radius: 20px;
    color: white;
    background-color: #ffe656;
    font-size: 1.2em;
    font-weight: bold;
    text-shadow: 1px 1px black;
    /* width: 30vw; */
  }
  input[type='submit'].register-submit {
    margin-top: 100px;
  }
  input[type='submit']:focus {
    border-radius: 12px;
  }
  input[type='submit']:hover {
    box-shadow: 0px 0px 1px 1px rgba(255, 230, 86, 0.1);
  }
  .requirements {
    position: absolute;
    top: 63%;
    left: 15%;
    text-align: left;
  }
  .email-one,
  .email-two,
  .email-three,
  .lock-one,
  .lock-two,
  .lock-three {
    position: absolute;
    height: auto;
  }
  .email-one,
  .email-two,
  .email-three {
    width: 30%;
    left: 4%;
  }
  .email-one {
    top: 15%;
  }
  .email-two {
    top: 26.5%;
  }
  .email-three {
    top: 15%;
  }
  .lock-one,
  .lock-two,
  .lock-three {
    width: 23%;
    left: 4%;
  }
  .lock-one {
    top: 39.5%;
  }
  .lock-two {
    top: 51%;
  }
  .lock-three {
    top: 28%;
  }
  .login-characters {
    /* position: relative; */
    width: 75%;
    height: auto;
  }
  .card-title {
    font-family: 'Montserrat', sans-serif;
    /* font-family: 'Work Sans', sans-serif; */
    font-size: 2em;
    width: 320px;
    /* margin-bottom: 10%; */
    font-weight: bold;
  }
  .title {
    font-family: 'Sofadi One', cursive;
    font-size: 2em;
    margin-bottom: 3%;
    font-weight: bold;
  }
  .recipe-card {
    position: absolute;
    display: flex;
    align-items: center;
    overflow: hidden;
    height: 69%;
    top: 13%;
    width: 370px;
    padding: 5%;
    margin-right: 30px;
    z-index: -1;
  }

  .macros {
    font-family: 'Montserrat', sans-serif;
    display: flex;
    flex-flow: row wrap;
    margin: 2%;
    font-weight: bold;
    font-size: 1.1em;
  }
  .description {
    font-family: 'Work Sans', sans-serif;
    /* color: rgba(0, 0, 0, 0.8); */
    line-height: 120%;
    font-size: 1.05em;
    height: 100px;
    overflow: scroll;
    color: rgba(0, 0, 0, 0.9);
    text-shadow: 2px 1px white;
    font-weight: bold;
  }
  .time {
    font-size: 1.1em;
    margin-bottom: 20px;
    margin-left: 42px;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    display: flex;
    text-align: center;
  }

  .recipe-card-content {
  }
  .roulette-button-container {
    display: flex;
    flex-flow: row nowrap;
    /* flex: 1 1 auto; */
    position: absolute;
    top: 92%;
    width: 390px;
    box-shadow: inset 0px 0px 1px 1px rgba(255, 230, 86, 0.1);
  }
  .roulette-start {
    display: flex;
    flex-direction: column;
    height: 100px;
    width: 200px;
    font-size: 2em;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: 40px;
  }
  .roulette-start-contaner {
    display: flex;
  }
  .roulette-button {
    display: flex;
    flex: 1;
    height: 70px;
    /* margin-right: -15px; */
    text-align: center;
    align-items: center;
    justify-content: center;
    font-size: 1.5em;
    border: none;
    margin-right: -3px;
    background-color: rgba(255, 230, 86, 0.8);
    /* box-shadow: inset 0px 0px -40px -40px rgba(255, 230, 86, 0.1); */
    color: rgba(0, 0, 0, 0.9);
    text-shadow: 2px 1px white;
    font-weight: bold;
  }
  ul {
    list-style: none;
    margin-right: 15%;
  }
  .title-left {
    color: #e0ff87;
    text-shadow: 1px 1px black;
  }
  .title-right {
    color: #df0054;
    text-shadow: 1px 1px white;
  }
  .roulette-img {
    width: 325px;
    height: auto;
  }
  .title-container {
    height: 4%;
    margin-bottom: 10%;
    margin-top: 4%;
  }
  .recipe-index-recipes {
    font-family: 'Work Sans';
    font-size: 1.3em;
    font-weight: bolder;
    color: rgba(0, 0, 0, 0.6);
  }
  .recipe-list {
    font-size: 1.2em;
    /* font-weight: bold; */
    margin-top: 20px;
    width: 380px;
    text-align: right;
    color: rgba(255, 230, 86, 1);
    font-family: 'Work Sans';
    text-shadow: 2px 2px black;
  }
  .boba {
    position: absolute;
    z-index: -1;
    top: 30px;
    left: 0px;
    height: 250px;
    width: auto;
    rotate: 40deg;
  }
  .milkshake {
    width: 200px;
    height: auto;
    position: absolute;
    top: 500px;
    left: 0px;
    rotate: 160deg;
    z-index: -1;
  }
  .user-things-heading {
    color: rgba(233, 0, 84, 1);
    font-weight: bolder;
  }
  .user-things-recipes {
    font-size: 1.2em;
    /* font-weight: bold; */
    margin-top: 20px;
    width: 300px;

    color: rgba(255, 230, 86, 1);
    font-family: 'Work Sans';
    text-shadow: 1px 1px black;
  }
  .menu-icon {
    width: 200px;
    height: auto;
    position: static;
    margin-top: -50px;
    margin-left: 200px;
    margin-bottom: -80px;
  }
  .nav-container {
    z-index: 2;
    position: absolute;
    top: 100px;
    left: 260px;
    display: flex;
    align-items: flex-start;
    flex-flow: column nowrap;
    height: 350px;
    transition: all 1s forwards;
  }
  .show {
    animation: show-nav 0.8s ease-out forwards;
    overflow: hidden;
  }
  .hide {
    animation: hide-nav 0.4s ease-out forwards;
    display: none;
    position: absolute;
    top: 0;
    left: 0;
  }
  @keyframes show-nav {
    0% {
      transform: translateX(100%);
    }
    100% {
      transform: translateX(0);
    }
  }
  @keyframes hide-nav {
    0% {
      transform: translateX(0);
    }

    100% {
      transform: translateX(100%);
    }
  }

  .nav-container > button {
    background-color: rgba(255, 230, 86, 0.5);
    height: 60px;
    width: 130px;
    justify-content: center;
    display: flex;
    font-size: 1.3em;
    align-items: center;
    border: none;
    color: white;
    text-decoration: none;
    margin: 1px;
    border-radius: 20px;
  }

  a {
    /* font-size: 1.2em; */
    font-weight: bold;
    text-shadow: 1px 1px black;
    color: white;
    text-decoration: none;
  }
  .nav-boba {
    position: absolute;
    width: 100px;
    height: auto;
    left: -200px;
    z-index: 1;
    left: 60px;
    top: 200px;
    rotate: -30deg;
    z-index: -1;
  }

  .page-fade-in {
    animation: show-page 1.2s ease-out forwards;
  }

  @keyframes show-page {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  .page-fade-in-short {
    animation: show-page 0.7s ease-out forwards;
  }
  .page-fade-in-long {
    animation: show-page 2.2s ease-out forwards;
  }
  .shopping-list-single {
    font-size: 2em;
    background: rgba(255, 255, 255, 0.3);
  }
  .shopping-image-container {
    position: absolute;
    width: 400px;

    height: 5000px;
    top: 0;
    left: 0;
    overflow: hidden;
  }
  .bubbles {
    position: absolute;
    top: 0;
    left: -400px;
    width: 844px;

    height: auto;
    z-index: -1;
    opacity: 0.7;
    overflow: hidden;
  }
  .bubbles2 {
    position: absolute;
    top: 1100px;
    left: -250px;
    width: 844px;

    height: auto;
    z-index: -1;
    opacity: 0.7;
    overflow: hidden;
  }
  .bubbles3 {
    position: absolute;
    top: 2500px;
    left: -200px;
    width: 844px;

    height: auto;
    z-index: -1;
    opacity: 0.7;
    overflow: hidden;
  }
}

